# fastapi-template

./: .env.example  .env.example.en  .gitignore  Dockerfile  README.en.md  README.md  compose.yml  pyproject.toml  run.py
app/: main.py
app/api/routes/: __init__.py  tokens.py
app/core/: config.py  database.py  errors.py  exceptions.py  handlers.py  lifecycle.py  middlewares.py  security.py
app/core/config/: __init__.py  database.py  path.py
app/models/: base.py  enums.py  mixins.py  user.py
app/schemas/: response.py  token.py  user.py
